# rust_shellcode_loader

./: Cargo.toml  README.md
src/: description.rs  loader.rs  main.rs
src/temp/asm/: Cargo.toml  main.rs
src/temp/create_fiber/: Cargo.toml  main.rs
src/temp/create_process/: Cargo.toml  main.rs
src/temp/create_remote_thread/: Cargo.toml
src/temp/create_remote_thread_native/: Cargo.toml  main.rs
src/temp/create_thread/: Cargo.toml  main.rs
src/temp/create_thread_native/: Cargo.toml  main.rs
src/temp/early_bird/: Cargo.toml  main.rs
src/temp/etwp_create_etw_thread/: Cargo.toml  main.rs
src/temp/memmap2_transmute/: Cargo.toml  main.rs
src/temp/module_stomping/: Cargo.toml  main.rs
src/temp/nt_queue_apc_thread_ex_local/: Cargo.toml  main.rs
src/temp/rtl_create_user_thread/: Cargo.toml  main.rs
